--- a/src/ezbot-v2-simulation/CMakeLists.txt
+++ b/src/ezbot-v2-simulation/CMakeLists.txt
@@ -14,6 +14,7 @@ install(
     DIRECTORY models/
     DESTINATION $ENV{HOME}/.gz/models/
 )
+ament_environment_hooks("${CMAKE_CURRENT_SOURCE_DIR}/hooks/${PROJECT_NAME}.dsv.in")
 
 
 ament_package()
