--- a/src/ezbot-v2-simulation/package.xml
+++ b/src/ezbot-v2-simulation/package.xml
@@ -17,6 +17,7 @@
   <buildtool_depend>ament_cmake_python</buildtool_depend>
   <run_depend>ezbot-v2</run_depend>
   <run_depend>gz_ros2_control</run_depend>
+  <run_depend>ros_gz</run_depend>
     <export>
         <build_type>ament_cmake</build_type>
         <!--
